--- a/app/styles/dns-lookup.css
+++ b/app/styles/dns-lookup.css
@@ -16,6 +16,9 @@ h1 {
   text-align:center;
 }
 
+.hostnameTable, .ipTable {
+  display:none;
+}
 .heading-container {
   margin-top:0px;
 }
@@ -43,14 +46,23 @@ h1 {
   padding-bottom:0px;
 }
 
-
-.table > tbody > tr:first-child >td{
-  border-top:0px;
+.table > tbody> tr > th {
+  border-top: 0px;
+  font-size: 1.2em;
+  font-weight:normal;
 }
+/*.table > tbody > tr:first-child >td{
+  border-top:0px;
+}*/
 .table > tbody > tr >td{
   padding:6px;
 }
+
+table > tbody > tr:last-child >td{
+ border-bottom:1px solid #ddd;
+  }
 .table {
+  margin-top: 50px;
   margin-bottom:4px;
 }
 /*.query-container {
@@ -91,7 +103,7 @@ td {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 600px;
   }
 
   /* Remove the padding we set earlier */
